fix: ollama model IA