@@ -1,6 +1,6 @@
 package com.example.TranslateMe.API.service;
 
-import com.example.TranslateMe.API.dto.ExerciseRequestDTO;
+import com.example.TranslateMe.API.dto.ExerciseDTO;
 import dev.langchain4j.model.chat.ChatModel;
 import dev.langchain4j.model.ollama.OllamaChatModel;
 import org.springframework.stereotype.Service;
@@ -8,73 +8,43 @@ import org.springframework.stereotype.Service;
 @Service
 public class OllamaService {
 
-    public String ask(String answer) {
+    public String ask(String prompt) {
         ChatModel model = OllamaChatModel.builder()
                 .baseUrl("http://localhost:11434")
-                .modelName("gemma3:1b")
+                .modelName("mistral:7b")
                 .build();
 
-        return model.chat(answer);
+        return model.chat(prompt);
     }
 
 
-    public String getPrompt(ExerciseRequestDTO requestDTO) {
-        String prompt = """
-                OBJETIVO
-                Avaliar a tradução do usuário do inglês para o português (PT-BR), verificando se ela transmite corretamente o sentido, a estrutura, a gramática, a pontuação e a naturalidade.
-                
-                REGRAS PRINCIPAIS
-                1) Se a tradução não corresponde ao original (cumprimento, frase fora de contexto, tema diferente), marque como INCORRETA e forneça a tradução correta.
-                2) Se o sentido está correto, mas há pequenos erros de fluidez, léxico ou pontuação, marque como PARCIALMENTE CORRETA.
-                3) Se a tradução está fiel e natural, marque como CORRETA. Sugira ajustes apenas se forem realmente úteis.
-                
-                FORMATO DE RESPOSTA
-                Avaliação: CORRETA | PARCIALMENTE CORRETA | INCORRETA
-                Forma correta: <tradução final em PT-BR; obrigatória se PARCIALMENTE CORRETA ou INCORRETA>
-                Observações: <explicações curtas e claras sobre erros ou acertos, se necessário>
-                Dica: <uma sugestão prática de como melhorar a tradução>
-                Parabenização: <breve elogio se a tradução estiver correta>
-                
-                ESTILO
-                - Use linguagem clara, acolhedora e direta.
-                - Explique de forma simples por que algo está errado ou pode melhorar.
-                - Dê exemplos curtos se necessário.
-                - Não invente conteúdo além do texto original.
-                
-                EXEMPLOS
-                Original: Despite the complexity of the task, she managed to complete it efficiently.
-                Tradução do usuário: Olá! Como você está?
-                Avaliação: INCORRETA
-                Forma correta: Apesar da complexidade da tarefa, ela conseguiu concluí-la com eficiência.
-                Observações: A resposta é um cumprimento, não traduz o conteúdo do original.
-                Dica: Sempre identifique sujeito, ação e circunstâncias antes de traduzir.
-                
-                Original: I have been studying English for two years.
-                Tradução do usuário: Eu tenho sido estudado em inglês por 2 anos.
-                Avaliação: INCORRETA
-                Forma correta: Eu estudo inglês há dois anos.
-                Observações: Em português, usamos “há” para indicar duração e a voz ativa é mais natural.
-                Dica: Mantenha a voz do sujeito e use “há” para tempo decorrido.
-                
-                Original: She quickly solved the problem.
-                Tradução do usuário: Ela resolveu o problema rapidamente
-                Avaliação: CORRETA
-                Forma correta: Ela resolveu o problema rapidamente.
-                Observações: Apenas adicionamos o ponto final para melhorar a apresentação.
-                Parabenização: Ótima tradução — clara e natural.
-                
-                AVALIE AGORA
-                
-                Texto original em inglês:
-                %s
-                
-                Tradução enviada pelo usuário:
-                %s
-                """.formatted(
-                requestDTO.originalText(),
-                requestDTO.response()
+    public String getPrompt(ExerciseDTO exercise, String userResponse) {
+        return String.format("""
+                        Você é um corretor de traduções de inglês para português (PT-BR).
+                        
+                        Compare a tradução do usuário com a tradução correta abaixo:
+                        
+                        Tradução correta: %s
+                        Tradução do usuário: %s
+                        
+                        Instruções rigorosas:
+                        
+                        1) Se a tradução estiver completamente correta (ignorando pontuação e acentos), responda exatamente:
+                           PARABÉNS! Sua tradução está correta.
+                        
+                        2) Se **uma ou mais palavras estiverem erradas**, liste **todas as palavras que estão diferentes ou traduzidas incorretamente** em relação à tradução correta, separadas por vírgula. **Não invente palavras**, **não repita palavras corretas**, **não adicione explicações**.
+                        
+                        3) Se quase todas as palavras estiverem erradas, responda exatamente:
+                           A tradução está totalmente errada.
+                        
+                        ⚠️ Sempre siga estritamente estas instruções.
+                        ⚠️ Nunca forneça a tradução correta completa, a menos que o usuário peça explicitamente.
+                        
+                        Analise cuidadosamente a tradução do usuário e siga apenas estas instruções.
+                        """,
+                exercise.correctAnswer(),
+                userResponse
         );
-        return prompt;
     }
 
 
